--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,10 @@
 title: Yuntao Du @ Purdue # the website title (if blank, full name will be used instead)
 first_name: Yuntao
 middle_name: 
-last_name: Du
+last_name: Du (杜云滔)
 email: ytdu@purdue.edu
 description: > # the ">" symbol means to ignore newlines until "footer_text:"
-  A simple, whitespace theme for academics. Based on [*folio](https://github.com/bogoli/-folio) design.
+  A research website of Yuntao Du. Based on [*folio](https://github.com/bogoli/-folio) design.
 footer_text: 
   # Powered by <a href="https://jekyllrb.com/" target="_blank">Jekyll</a> with <a href="https://github.com/alshedivat/al-folio">al-folio</a> theme.
   # Hosted by <a href="https://pages.github.com/" target="_blank">GitHub Pages</a>.
@@ -16,7 +16,7 @@ footer_text:
 keywords:  # add your own keywords or leave empty
 
 lang: en # the language of your site (for example: en, fr, cn, ru, etc.)
-icon: /assets/img/favicon.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
+icon: favicon.ico  # the emoji used as the favicon (alternatively, provide image name in /assets/img/)
 
 url: https://research.zealscott.com # the base hostname & protocol for your site
 baseurl: / # the subpath of your site, e.g. /blog/
