--- a/_data/coauthors.yml
+++ b/_data/coauthors.yml
@@ -1,34 +1,33 @@
-"Adams":
-  - firstname: ["Edwin", "E.", "E. P.", "Edwin Plimpton"]
-    url: https://en.wikipedia.org/wiki/Edwin_Plimpton_Adams
+"Yunjun":
+  - firstname: ["Gao"]
+    url: https://person.zju.edu.cn/en/gaoyj_en
 
-"Podolsky":
-  - firstname: ["Boris", "B.", "B. Y.", "Boris Yakovlevich"]
-    url: https://en.wikipedia.org/wiki/Boris_Podolsky
+"Lu":
+  - firstname: ["Chen"]
+    url: https://person.zju.edu.cn/en/luchen
 
-"Rosen":
-  - firstname: ["Nathan", "N."]
-    url: https://en.wikipedia.org/wiki/Nathan_Rosen
+"Jensen":
+  - firstname: [" Christian S."]
+    url: https://homes.cs.aau.dk/~csj/
 
-"Bach": 
-  - firstname: ["Johann Sebastian", "J. S."]
-    url: https://en.wikipedia.org/wiki/Johann_Sebastian_Bach
+"Baihua": 
+  - firstname: ["Zheng"]
+    url: https://faculty.smu.edu.sg/profile/zheng-baihua-521
 
-  - firstname: ["Carl Philipp Emanuel", "C. P. E."]
-    url: https://en.wikipedia.org/wiki/Carl_Philipp_Emanuel_Bach
+"Jianxun"
+  - firstname: ["Lian"]
+    url:https://www.microsoft.com/en-us/research/people/jialia
 
-"Przibram":
-  - firstname: ["Karl"]
-    url: https://link.springer.com/article/10.1007/s00016-019-00242-z
+"Xing"
+  - firstname: ["Xie"]
+    url:https://www.microsoft.com/en-us/research/people/xingx/
 
-"Schrödinger":
-  - firstname: ["Erwin"]
-    url: https://en.wikipedia.org/wiki/Erwin_Schr%C3%B6dinger
 
-"Lorentz":
-  - firstname: ["Hendrik Antoon"]
-    url: https://en.wikipedia.org/wiki/Hendrik_Lorentz
+"Zhikun"
+  - firstname: ["Zhang"]
+    url:http://zhangzhk.com/
 
-"Planck":
-  - firstname: ["Max"]
-    url: https://en.wikipedia.org/wiki/Max_Planck
+
+"Ninghui"
+  - firstname: ["Li"]
+    url:https://www.cs.purdue.edu/homes/ninghui
