--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -1,97 +1,63 @@
-- title: General Information
-  type: map
-  contents:
-    - name: Full Name
-      value: Albert Einstein
-    - name: Date of Birth
-      value: 14th March 1879
-    - name: Languages
-      value: English, German
-
 - title: Education
   type: time_table
   contents:
-    - title: PhD
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1905
+    - title: Ph.D. in Computer Science
+      institution: Purdue University, West Lafayette, United States
+      year: 2028 (expected)
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Federal teaching diploma
-      institution: Eidgenössische Technische Hochschule, Zurich, Switzerland
-      year: 1900
+        - Advised by Prof. [Ninghui Li](https://www.cs.purdue.edu/homes/ninghui).
+    
+    - title: M.E. in Computer Technology
+      institution: Zhejiang University, Hangzhou, China
+      year: 2023
       description:
-        - Description 1.
-        - Description 2.
+        - Graduated with the highest distinction.
+        - Advised by Prof. [Yunjun Gao](https://person.zju.edu.cn/en/gaoyj_en).
+    
+    - title: B.E. in Data Science
+      institution: East China Normal University, Shanghai, China
+      year: 2020
+      description:
+        - Graduated with the highest distinction.
 
 - title: Experience
   type: time_table
   contents:
-    - title: Professor of Theoretical Physics
-      institution: Institute for Advanced Study, Princeton University
-      year: 1933 - 1955
+    - title: Research Intern
+      institution: Microsoft Research Asia, Beijing, China.
+      year: 2022
       description:
-        - Description 1.
-        - Description 2.
-        - title: Description 3.
-          contents:
-            - Sub-description 1.
-            - Sub-description 2.
-    - title: Visiting Professor
-      institution: California Institute of Technology, Pasadena, California, US
-      year: 1933
-      description:
-        - Description 1.
-        - Description 2.
-
-    - title: Director
-      institution: Kaiser Wilhelm Institute for Physics, Berlin, Germany.
-      year: 1917-1933
-
-    - title: Professor of Theoretical Physics
-      institution: Karl-Ferdinand University, Prague, Czechoslovakia
-      year: 1911 - 1917
-      description:
-
-    - title: Associate Professor of Theoretical Physics
-      institution: University of Zurich, Zurich, Switzerland
-      year: 1909 - 1911
-
-- title: Open Source Projects
-  type: time_table
-  contents:
-    - title: <a href="https://github.com/alshedivat/al-folio">al-folio</a>
-      year: 2015-now
-      description: A beautiful, simple, clean, and responsive Jekyll theme for academics.
+        - Hosted by Dr. [Jianxun Lian](https://www.microsoft.com/en-us/research/people/jialia) and Dr. [Xing Xie](https://www.microsoft.com/en-us/research/people/xingx/).
 
 - title: Honors and Awards
   type: time_table
   contents:
-    - year: 1921
+    - year: 2023
       items: 
-        - Nobel Prize in Physics 
-        - Matteucci Medal
-    - year: 2029
+        - SIGIR Student Travel Grant
+        - Ross Fellowship, Purdue University
+        - Herbold Scholarship, Purdue University
+        - Presidential Doctoral Excellence Awards, Purdue University
+        - Provincial Outstanding Graduates, Zhejiang University
+    - year: 2022
       items: 
-        - Max Planck Medal
+        - National Scholarship, Zhejiang University
+        - Excellent Graduate Student, Zhejiang University
+    - year: 2021
+      items: 
+        - National Scholarship, Zhejiang University
+        - Excellent Graduate Student, Zhejiang University
 
-- title: Academic Interests
+- title: Professional Services
   type: nested_list
   contents:
-    - title: Topic 1.
+    - title: Conference Reviewer
       items: 
-        - Description 1.
-        - Description 2.
-    - title: Topic 2.
+        - The AAAI Conference on Artificial Intelligence (AAAI): 2023.
+        - ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR): 2023.
+        - International ACM SIGIR Conference on Information Retrieval in the Asia Pacific (SIGIRAP): 2023.
+    - title: Journal Reviewer
       items:
-        - Description 1.
-        - Description 2.
+        - IEEE Transactions on Knowledge and Data Engineering (TKDE)
+        - ACM Transactions on Recommender Systems (TORS)
 
-- title: Other Interests
-  type: list
-  contents:
-    - <u>Hobbies:</u> Hobby 1, Hobby 2, etc.
