--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -43,6 +43,7 @@
       items: 
         - National Scholarship, Zhejiang University
         - Excellent Graduate Student, Zhejiang University
+        - SIGIR Student Travel Grant
     - year: 2021
       items: 
         - National Scholarship, Zhejiang University
@@ -55,7 +56,7 @@
       items: 
         - "The AAAI Conference on Artificial Intelligence (AAAI): 2023."
         - "ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR): 2023."
-        - "International ACM SIGIR Conference on Information Retrieval in the Asia Pacific (SIGIRAP): 2023."
+        - "International ACM SIGIR Conference on Information Retrieval in the Asia Pacific (SIGIR-AP): 2023."
     - title: Journal Reviewer
       items:
         - IEEE Transactions on Knowledge and Data Engineering (TKDE)
