--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -64,5 +64,6 @@
         - IEEE Transactions on Knowledge and Data Engineering (TKDE)
         - ACM Transactions on Recommender Systems (TORS)
     - title: Subreviewer
+      items:
         - "ACM Conference on Data and Application Security and Privacy (CODASPY): 2024"
         - "International Conference on Neural Information Processing (ICONIP): 2023."
