--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -5,6 +5,7 @@
       institution: Purdue University, West Lafayette, United States
       year: 2028 (expected)
       description:
+        - Supported by the Ross Fellowship and Herbold Scholarship.
         - Advised by Prof. <a href="https://www.cs.purdue.edu/homes/ninghui">Ninghui Li</a>.
     
     - title: M.E. in Computer Technology
