--- a/_data/cv.yml
+++ b/_data/cv.yml
@@ -57,13 +57,14 @@
   contents:
     - title: Conference Reviewer
       items: 
-        - "The AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024"
-        - "ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR): 2023, 2024"
+        - "The AAAI Conference on Artificial Intelligence (AAAI): 2023, 2024."
+        - "ACM SIGIR Conference on Research and Development in Information Retrieval (SIGIR): 2023, 2024."
+        - "ACM International Conference on Information and Knowledge Management (CIKM): 2024."
         - "International ACM SIGIR Conference on Information Retrieval in the Asia Pacific (SIGIR-AP): 2023."
     - title: Journal Reviewer
       items:
-        - IEEE Transactions on Knowledge and Data Engineering (TKDE)
-        - ACM Transactions on Recommender Systems (TORS)
+        - "IEEE Transactions on Knowledge and Data Engineering (TKDE)"
+        - "ACM Transactions on Recommender Systems (TORS)"
     - title: Subreviewer
       items:
         - "ACM Conference on Data and Application Security and Privacy (CODASPY): 2024"
